<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reporte</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_connection">ConnectionActivity</string>

    <string name="addConnection">Crear Conexión</string>
    <string name="server">Servidor</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="grabar">Grabar</string>

</resources>
